| priyanshu| add gulp task for dekho and likho India

--- a/crowdsource-ui/locales/ml.json
+++ b/crowdsource-ui/locales/ml.json
@@ -268,5 +268,25 @@
 	"Suno India": "Suno India",
 	"Likho India": "Likho India",
 	"Dekho India": "Dekho India",
-	"User Details": "User Details"
+	"User Details": "User Details",
+	"Type what you hear": "Type what you hear",
+	"Validate": "Validate",
+	"Correct text as per the audio": "Correct text as per the audio",
+	"Total no. of audios listened": "Total no. of audios listened",
+	"hrs contributed": "hrs contributed",
+	"hrs validated": "hrs validated",
+	"Translate": "Translate",
+	"Translate and type the text": "Translate and type the text",
+	"Correct the translation": "Correct the translation",
+	"languages contributed in pair": "languages contributed in pair",
+	"No. of Translations contributed": "No. of Translations contributed",
+	"No. of translations validated": "No. of translations validated",
+	"Total no.of translations": "Total no.of translations",
+	"Look": "Look",
+	"Type the text as per the image": "Type the text as per the image",
+	"Correct the text as per the image": "Correct the text as per the image",
+	"Image-text contributed": "Image-text contributed",
+	"Image-text validated": "Image-text validated",
+	"Total no. of image-text corrections": "Total no. of image-text corrections",
+	"Total no. of translations": "Total no. of translations"
 }
