| priyanshu| add static validation page for sunoIndia

--- a/crowdsource-ui/locales/te.json
+++ b/crowdsource-ui/locales/te.json
@@ -242,5 +242,7 @@
 	"Image-text contributed": "Image-text contributed",
 	"Image-text validated": "Image-text validated",
 	"Total no. of image-text corrections": "Total no. of image-text corrections",
-	"Total no. of translations": "Total no. of translations"
+	"Total no. of translations": "Total no. of translations",
+	"Type in the text as you hear it from the following Audio": "Type in the text as you hear it from the following Audio",
+	"Start typing here...": "Start typing here..."
 }
