| priyanshu| add test speaker component in validation page for sunoIndia

--- a/crowdsource-ui/locales/bn.json
+++ b/crowdsource-ui/locales/bn.json
@@ -338,5 +338,6 @@
 	"Does the audio match the sentence?": "Does the audio match the sentence?",
 	"Need change": "Need change",
 	"Need Change": "Need Change",
-	"Needs Change": "Needs Change"
+	"Needs Change": "Needs Change",
+	"Test your Speaker": "Test your Speaker"
 }
