| priyanshu| enable virtual keyboard on edit in validation page sunoIndia

--- a/crowdsource-ui/locales/ta.json
+++ b/crowdsource-ui/locales/ta.json
@@ -245,5 +245,8 @@
 	"Need change": "Need change",
 	"Need Change": "Need Change",
 	"Needs Change": "Needs Change",
+	"Your Edit": "Your Edit",
+	"Cancel": "Cancel",
+	"Submit": "Submit",
 	"Test your Speaker": "Test your Speaker"
 }
