--- a/crowdsource-ui/locales/en.json
+++ b/crowdsource-ui/locales/en.json
@@ -246,5 +246,8 @@
 	"Need change": "Need change",
 	"Need Change": "Need Change",
 	"Needs Change": "Needs Change",
+	"Your Edit": "Your Edit",
+	"Cancel": "Cancel",
+	"Submit": "Submit",
 	"Test your Speaker": "Test your Speaker"
 }
