| priyanshu + Ayush | integrate validator api to get audio

--- a/crowdsource-ui/locales/as.json
+++ b/crowdsource-ui/locales/as.json
@@ -350,5 +350,9 @@
 	"Need change": "Need change",
 	"Need Change": "Need Change",
 	"Needs Change": "Needs Change",
-	"Test your Speaker": "Test your Speaker"
+	"Test your Speaker": "Test your Speaker",
+	"Your Edit": "Your Edit",
+	"Cancel": "Cancel",
+	"Submit": "Submit",
+	"Original Text": "Original Text"
 }
