--- a/crowdsource-ui/locales/ta.json
+++ b/crowdsource-ui/locales/ta.json
@@ -248,5 +248,6 @@
 	"Your Edit": "Your Edit",
 	"Cancel": "Cancel",
 	"Submit": "Submit",
-	"Test your Speaker": "Test your Speaker"
+	"Test your Speaker": "Test your Speaker",
+	"Original Text": "Original Text"
 }
