--- a/crowdsource-ui/locales/bn.json
+++ b/crowdsource-ui/locales/bn.json
@@ -342,5 +342,6 @@
 	"Your Edit": "Your Edit",
 	"Cancel": "Cancel",
 	"Submit": "Submit",
-	"Test your Speaker": "Test your Speaker"
+	"Test your Speaker": "Test your Speaker",
+	"Original Text": "Original Text"
 }
