--- a/crowdsource-ui/locales/mai.json
+++ b/crowdsource-ui/locales/mai.json
@@ -301,5 +301,6 @@
 	"Your Edit": "Your Edit",
 	"Cancel": "Cancel",
 	"Submit": "Submit",
-	"Test your Speaker": "Test your Speaker"
+	"Test your Speaker": "Test your Speaker",
+	"Original Text": "Original Text"
 }
