--- a/crowdsource-ui/locales/or.json
+++ b/crowdsource-ui/locales/or.json
@@ -313,5 +313,6 @@
 	"Your Edit": "Your Edit",
 	"Cancel": "Cancel",
 	"Submit": "Submit",
-	"Test your Speaker": "Test your Speaker"
+	"Test your Speaker": "Test your Speaker",
+	"Original Text": "Original Text"
 }
