--- a/crowdsource-ui/locales/mr.json
+++ b/crowdsource-ui/locales/mr.json
@@ -247,8 +247,10 @@
 	"Need Change": "Need Change",
 	"Needs Change": "Needs Change",
 	"Your Edit": "Your Edit",
-	"Cancel": "Cancel",
-	"Submit": "Submit",
+	"Original Text": "Original Text",
 	"Test your Speaker": "Test your Speaker",
-	"Original Text": "Original Text"
+	"CANCEL": "CANCEL",
+	"REPLAY": "REPLAY",
+	"Cancel": "Cancel",
+	"Submit": "Submit"
 }
