Ayush | Did home page UI changes

--- a/crowdsource-ui/locales/kn.json
+++ b/crowdsource-ui/locales/kn.json
@@ -278,5 +278,8 @@
 	"CANCEL": "CANCEL",
 	"REPLAY": "REPLAY",
 	"Cancel": "Cancel",
-	"Submit": "Submit"
+	"Submit": "Submit",
+	"Transcribe": "Transcribe",
+	"India Help your language by donating your voice": "India Help your language by donating your voice",
+	"India Help your language by transcribing audio into text": "India Help your language by transcribing audio into text"
 }
