| Priyanshu | fix progress bar palcement in sunoIndia functional pages

--- a/crowdsource-ui/locales/ur.json
+++ b/crowdsource-ui/locales/ur.json
@@ -296,5 +296,7 @@
 	"Submit": "Submit",
 	"Transcribe": "Transcribe",
 	"India Help your language by donating your voice": "India Help your language by donating your voice",
-	"India Help your language by transcribing audio into text": "India Help your language by transcribing audio into text"
+	"India Help your language by transcribing audio into text": "India Help your language by transcribing audio into text",
+	"Help your language by donating your voice": "Help your language by donating your voice",
+	"Help your language by transcribing audio into text": "Help your language by transcribing audio into text"
 }
