--- a/crowdsource-ui/locales/as.json
+++ b/crowdsource-ui/locales/as.json
@@ -359,5 +359,7 @@
 	"REPLAY": "REPLAY",
 	"Transcribe": "Transcribe",
 	"India Help your language by donating your voice": "India Help your language by donating your voice",
-	"India Help your language by transcribing audio into text": "India Help your language by transcribing audio into text"
+	"India Help your language by transcribing audio into text": "India Help your language by transcribing audio into text",
+	"Help your language by donating your voice": "Help your language by donating your voice",
+	"Help your language by transcribing audio into text": "Help your language by transcribing audio into text"
 }
