| Priyanshu| fix noData issue for contibution flow for sunoIndia

--- a/crowdsource-ui/locales/hi.json
+++ b/crowdsource-ui/locales/hi.json
@@ -311,5 +311,8 @@
 	"India Help your language by donating your voice": "India Help your language by donating your voice",
 	"India Help your language by transcribing audio into text": "India Help your language by transcribing audio into text",
 	"Help your language by donating your voice": "Help your language by donating your voice",
-	"Help your language by transcribing audio into text": "Help your language by transcribing audio into text"
+	"Help your language by transcribing audio into text": "Help your language by transcribing audio into text",
+	"": "",
+	"Thank you for your enthusiasm to transcribe the recordings.": "Thank you for your enthusiasm to transcribe the recordings.",
+	"Back to SunoIndia Home": "Back to SunoIndia Home"
 }
