| Priyanshu| extract stats row and moduleIntro component for homepage

--- a/crowdsource-ui/locales/doi.json
+++ b/crowdsource-ui/locales/doi.json
@@ -300,5 +300,19 @@
 	"Help your language by transcribing audio into text": "Help your language by transcribing audio into text",
 	"": "",
 	"Thank you for your enthusiasm to transcribe the recordings.": "Thank you for your enthusiasm to transcribe the recordings.",
-	"Back to SunoIndia Home": "Back to SunoIndia Home"
+	"Back to SunoIndia Home": "Back to SunoIndia Home",
+	"language pairs": "language pairs",
+	"People participated": "People participated",
+	"Hrs transcribed": "Hrs transcribed",
+	"Hrs corrected": "Hrs corrected",
+	"Languages": "Languages",
+	"Language pairs": "Language pairs",
+	"Translations done": "Translations done",
+	"Translations corrected": "Translations corrected",
+	"Images labelled": "Images labelled",
+	"Text corrected": "Text corrected",
+	"LIKHO India": "LIKHO India",
+	"Help your language by translating text": "Help your language by translating text",
+	"DEKHO India": "DEKHO India",
+	"Help your language by labelling images": "Help your language by labelling images"
 }
