| Priyanshu | add static thankyou page to sunoIndia contribution page

--- a/crowdsource-ui/locales/doi.json
+++ b/crowdsource-ui/locales/doi.json
@@ -314,5 +314,12 @@
 	"LIKHO India": "LIKHO India",
 	"Help your language by translating text": "Help your language by translating text",
 	"DEKHO India": "DEKHO India",
-	"Help your language by labelling images": "Help your language by labelling images"
+	"Help your language by labelling images": "Help your language by labelling images",
+	"Contributions made to SUNO India": "Contributions made to SUNO India",
+	"Contributions made to LIKHO India": "Contributions made to LIKHO India",
+	"Contributions made to DEKHO India": "Contributions made to DEKHO India",
+	"Top 5 most contributed languages": "Top 5 most contributed languages",
+	"Hours transcribed and corrected": "Hours transcribed and corrected",
+	"Total translations": "Total translations",
+	"Images labelled and corrected": "Images labelled and corrected"
 }
