Ayush | Done with functional flow of dekho india

--- a/crowdsource-ui/locales/as.json
+++ b/crowdsource-ui/locales/as.json
@@ -385,5 +385,9 @@
 	"Top 5 most contributed languages": "Top 5 most contributed languages",
 	"Hours transcribed and corrected": "Hours transcribed and corrected",
 	"Total translations": "Total translations",
-	"Images labelled and corrected": "Images labelled and corrected"
+	"Images labelled and corrected": "Images labelled and corrected",
+	"Is the text from following image captured correctly?": "Is the text from following image captured correctly?",
+	"Captured Text": "Captured Text",
+	"Add Text": "Add Text",
+	"Type the text from the following image in the box": "Type the text from the following image in the box"
 }
