Ayush | Did changes for thank you page

--- a/crowdsource-ui/locales/doi.json
+++ b/crowdsource-ui/locales/doi.json
@@ -325,5 +325,7 @@
 	"Is the text from following image captured correctly?": "Is the text from following image captured correctly?",
 	"Captured Text": "Captured Text",
 	"Add Text": "Add Text",
-	"Type the text from the following image in the box": "Type the text from the following image in the box"
+	"Type the text from the following image in the box": "Type the text from the following image in the box",
+	"You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"../badges.html\">Know more</a>": "You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"../badges.html\">Know more</a>",
+	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages"
 }
