--- a/crowdsource-ui/locales/or.json
+++ b/crowdsource-ui/locales/or.json
@@ -351,5 +351,13 @@
 	"Add Text": "Add Text",
 	"Type the text from the following image in the box": "Type the text from the following image in the box",
 	"You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"../badges.html\">Know more</a>": "You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"../badges.html\">Know more</a>",
-	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages"
+	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages",
+	"Type the translation of the given sentence": "Type the translation of the given sentence",
+	"ENGLISH": "ENGLISH",
+	"HINDI": "HINDI",
+	"Is the translation correct?": "Is the translation correct?",
+	"FROM": "FROM",
+	"TO": "TO",
+	"Select the language Pair for voluntary contribution": "Select the language Pair for voluntary contribution",
+	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages"
 }
