--- a/crowdsource-ui/locales/kd.json
+++ b/crowdsource-ui/locales/kd.json
@@ -292,5 +292,7 @@
 	"FROM": "FROM",
 	"TO": "TO",
 	"Select the language Pair for voluntary contribution": "Select the language Pair for voluntary contribution",
-	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages"
+	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages",
+	"Languages pairs": "Languages pairs",
+	"Back": "Back"
 }
