Ayush | Binded data for bar chart for all home pages

--- a/crowdsource-ui/locales/as.json
+++ b/crowdsource-ui/locales/as.json
@@ -399,5 +399,6 @@
 	"TO": "TO",
 	"Select the language Pair for voluntary contribution": "Select the language Pair for voluntary contribution",
 	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages",
-	"Languages pairs": "Languages pairs"
+	"Languages pairs": "Languages pairs",
+	"Your languageand top 3 most contributed languages": "Your languageand top 3 most contributed languages",
 }
