--- a/crowdsource-ui/locales/doi.json
+++ b/crowdsource-ui/locales/doi.json
@@ -337,5 +337,5 @@
 	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages",
 	"Languages pairs": "Languages pairs",
 	"Back": "Back",
-	"Your languageand top 3 most contributed languages": "Your languageand top 3 most contributed languages"
+	"Your languageand top 3 most contributed languages": "Your languageand top 3 most contributed languages",
 }
