--- a/crowdsource-ui/locales/sa.json
+++ b/crowdsource-ui/locales/sa.json
@@ -297,5 +297,6 @@
 	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages",
 	"Your languageand top 3 most contributed languages": "Your languageand top 3 most contributed languages",
 	"Languages pairs": "Languages pairs",
-	"Back": "Back"
+	"Back": "Back",
+	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages"
 }
