| Priyanshu | added dropDown with DummyData in likhoIndia HomePage

--- a/crowdsource-ui/locales/bn.json
+++ b/crowdsource-ui/locales/bn.json
@@ -390,4 +390,8 @@
 	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages",
 	"Languages pairs": "Languages pairs",
 	"Your languageand top 3 most contributed languages": "Your languageand top 3 most contributed languages",
+	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages",
+	"YOUR EDIT": "YOUR EDIT",
+	"Bengali": "Bengali",
+	"Urdu": "Urdu"
 }
