--- a/crowdsource-ui/locales/as.json
+++ b/crowdsource-ui/locales/as.json
@@ -400,5 +400,8 @@
 	"Select the language Pair for voluntary contribution": "Select the language Pair for voluntary contribution",
 	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages",
 	"Languages pairs": "Languages pairs",
-	"Your languageand top 3 most contributed languages": "Your languageand top 3 most contributed languages",
+	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages",
+	"YOUR EDIT": "YOUR EDIT",
+	"Bengali": "Bengali",
+	"Urdu": "Urdu"
 }
