--- a/crowdsource-ui/locales/doi.json
+++ b/crowdsource-ui/locales/doi.json
@@ -338,4 +338,10 @@
 	"Languages pairs": "Languages pairs",
 	"Back": "Back",
 	"Your languageand top 3 most contributed languages": "Your languageand top 3 most contributed languages",
+	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages",
+	"YOUR EDIT": "YOUR EDIT",
+	"Hindi": "Hindi",
+	"English": "English",
+	"Bengali": "Bengali",
+	"Urdu": "Urdu"
 }
