--- a/crowdsource-ui/locales/kn.json
+++ b/crowdsource-ui/locales/kn.json
@@ -323,5 +323,8 @@
 	"Select the language Pair for voluntary contribution": "Select the language Pair for voluntary contribution",
 	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages",
 	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages",
-	"Languages pairs": "Languages pairs"
+	"Languages pairs": "Languages pairs",
+	"YOUR EDIT": "YOUR EDIT",
+	"Bengali": "Bengali",
+	"Urdu": "Urdu"
 }
