--- a/crowdsource-ui/locales/mnibn.json
+++ b/crowdsource-ui/locales/mnibn.json
@@ -298,5 +298,10 @@
 	"Your languageand top 3 most contributed languages": "Your languageand top 3 most contributed languages",
 	"Languages pairs": "Languages pairs",
 	"Back": "Back",
-	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages"
+	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages",
+	"YOUR EDIT": "YOUR EDIT",
+	"Hindi": "Hindi",
+	"English": "English",
+	"Bengali": "Bengali",
+	"Urdu": "Urdu"
 }
