| Priyanshu | added thankyou page for validator in likhoIndia

--- a/crowdsource-ui/locales/as.json
+++ b/crowdsource-ui/locales/as.json
@@ -403,5 +403,7 @@
 	"Your language and top 3 most contributed languages": "Your language and top 3 most contributed languages",
 	"YOUR EDIT": "YOUR EDIT",
 	"Bengali": "Bengali",
-	"Urdu": "Urdu"
+	"Urdu": "Urdu",
+	"FROM: ": "FROM: ",
+	"TO: ": "TO: "
 }
