--- a/crowdsource-ui/locales/kn.json
+++ b/crowdsource-ui/locales/kn.json
@@ -326,5 +326,7 @@
 	"Languages pairs": "Languages pairs",
 	"YOUR EDIT": "YOUR EDIT",
 	"Bengali": "Bengali",
-	"Urdu": "Urdu"
+	"Urdu": "Urdu",
+	"FROM: ": "FROM: ",
+	"TO: ": "TO: "
 }
