--- a/crowdsource-ui/locales/doi.json
+++ b/crowdsource-ui/locales/doi.json
@@ -343,5 +343,7 @@
 	"Hindi": "Hindi",
 	"English": "English",
 	"Bengali": "Bengali",
-	"Urdu": "Urdu"
+	"Urdu": "Urdu",
+	"FROM: ": "FROM: ",
+	"TO: ": "TO: "
 }
