--- a/crowdsource-ui/locales/en.json
+++ b/crowdsource-ui/locales/en.json
@@ -302,5 +302,7 @@
 	"Hindi": "Hindi",
 	"English": "English",
 	"Bengali": "Bengali",
-	"Urdu": "Urdu"
+	"Urdu": "Urdu",
+	"FROM: ": "FROM: ",
+	"TO: ": "TO: "
 }
