--- a/crowdsource-ui/locales/te.json
+++ b/crowdsource-ui/locales/te.json
@@ -305,5 +305,7 @@
 	"Hindi": "Hindi",
 	"English": "English",
 	"Bengali": "Bengali",
-	"Urdu": "Urdu"
+	"Urdu": "Urdu",
+	"FROM: ": "FROM: ",
+	"TO: ": "TO: "
 }
