--- a/crowdsource-ui/locales/gu.json
+++ b/crowdsource-ui/locales/gu.json
@@ -304,5 +304,6 @@
 	"Bengali": "Bengali",
 	"Urdu": "Urdu",
 	"FROM: ": "FROM: ",
-	"TO: ": "TO: "
+	"TO: ": "TO: ",
+	"Select the language pair": "Select the language pair"
 }
