--- a/crowdsource-ui/locales/kr.json
+++ b/crowdsource-ui/locales/kr.json
@@ -302,5 +302,6 @@
 	"Bengali": "Bengali",
 	"Urdu": "Urdu",
 	"FROM: ": "FROM: ",
-	"TO: ": "TO: "
+	"TO: ": "TO: ",
+	"Select the language pair": "Select the language pair"
 }
