--- a/crowdsource-ui/locales/satol.json
+++ b/crowdsource-ui/locales/satol.json
@@ -275,5 +275,6 @@
 	"Bengali": "Bengali",
 	"Urdu": "Urdu",
 	"FROM: ": "FROM: ",
-	"TO: ": "TO: "
+	"TO: ": "TO: ",
+	"Select the language pair": "Select the language pair"
 }
