Ayuhs | Add label to show expanded view in dekho india

--- a/crowdsource-ui/locales/as.json
+++ b/crowdsource-ui/locales/as.json
@@ -406,5 +406,6 @@
 	"Urdu": "Urdu",
 	"FROM: ": "FROM: ",
 	"TO: ": "TO: ",
-	"Select the language pair": "Select the language pair"
+	"Select the language pair": "Select the language pair",
+	"Click to open expand view": "Click to open expand view"
 }
