--- a/crowdsource-ui/locales/hi.json
+++ b/crowdsource-ui/locales/hi.json
@@ -359,5 +359,6 @@
 	"Urdu": "Urdu",
 	"FROM: ": "FROM: ",
 	"TO: ": "TO: ",
-	"Select the language pair": "Select the language pair"
+	"Select the language pair": "Select the language pair",
+	"Click to open expand view": "Click to open expand view"
 }
