Ayush | Show dummy data for DEKHO india

--- a/crowdsource-ui/locales/bn.json
+++ b/crowdsource-ui/locales/bn.json
@@ -397,5 +397,11 @@
 	"FROM: ": "FROM: ",
 	"TO: ": "TO: ",
 	"Select the language pair": "Select the language pair",
-	"Click to open expand view": "Click to open expand view"
+	"Click to open expand view": "Click to open expand view",
+	"Thank you for your enthusiasm to translate the sentences.": "Thank you for your enthusiasm to translate the sentences.",
+	"Back to LikhoIndia Home": "Back to LikhoIndia Home",
+	"Thank you for your enthusiasm to validate the translations.": "Thank you for your enthusiasm to validate the translations.",
+	"Thank you for your enthusiasm to transcribe the sentences.": "Thank you for your enthusiasm to transcribe the sentences.",
+	"Back to dekhoIndia Home": "Back to dekhoIndia Home",
+	"Thank you for your enthusiasm to validate the image text.": "Thank you for your enthusiasm to validate the image text."
 }
