Ayush | Change in contribution stats for likho and dekho

--- a/crowdsource-ui/locales/pa.json
+++ b/crowdsource-ui/locales/pa.json
@@ -399,5 +399,10 @@
 	"Thank you for your enthusiasm to validate the translations.": "Thank you for your enthusiasm to validate the translations.",
 	"Thank you for your enthusiasm to transcribe the sentences.": "Thank you for your enthusiasm to transcribe the sentences.",
 	"Back to dekhoIndia Home": "Back to dekhoIndia Home",
-	"Thank you for your enthusiasm to validate the image text.": "Thank you for your enthusiasm to validate the image text."
+	"Thank you for your enthusiasm to validate the image text.": "Thank you for your enthusiasm to validate the image text.",
+	"Select the language pair for voluntary contribution": "Select the language pair for voluntary contribution",
+	"FROM ": "FROM ",
+	"TO ": "TO ",
+	"Contributions made to Likho India": "Contributions made to Likho India",
+	"Contributions made to Dekho India": "Contributions made to Dekho India"
 }
