| Priyanshu | add page title in header for suno, dekho and likho India

--- a/crowdsource-ui/locales/mnibn.json
+++ b/crowdsource-ui/locales/mnibn.json
@@ -318,5 +318,8 @@
 	"FROM ": "FROM ",
 	"TO ": "TO ",
 	"Contributions made to Likho India": "Contributions made to Likho India",
-	"Contributions made to Dekho India": "Contributions made to Dekho India"
+	"Contributions made to Dekho India": "Contributions made to Dekho India",
+	"Badges": "Badges",
+	"Dashboard": "Dashboard",
+	"Label": "Label"
 }
