--- a/crowdsource-ui/locales/en.json
+++ b/crowdsource-ui/locales/en.json
@@ -317,5 +317,8 @@
 	"FROM ": "FROM ",
 	"TO ": "TO ",
 	"Contributions made to Likho India": "Contributions made to Likho India",
-	"Contributions made to Dekho India": "Contributions made to Dekho India"
+	"Contributions made to Dekho India": "Contributions made to Dekho India",
+	"Badges": "Badges",
+	"Dashboard": "Dashboard",
+	"Label": "Label"
 }
