--- a/crowdsource-ui/locales/ml.json
+++ b/crowdsource-ui/locales/ml.json
@@ -382,5 +382,7 @@
 	"Click to open expanded view": "Click to open expanded view",
 	"sentences validated": "sentences validated",
 	"images labels validated": "images labels validated",
-	"<span id=\"current_badge_name_1\"></span> contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.": "<span id=\"current_badge_name_1\"></span> contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences."
+	"<span id=\"current_badge_name_1\"></span> contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.": "<span id=\"current_badge_name_1\"></span> contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.",
+	"sentences contributed": "sentences contributed",
+	"images labels contributed": "images labels contributed"
 }
