| Priyanshu |add draggable keyboard and showVirtualKeyboard button on all functional pages

--- a/crowdsource-ui/locales/mai.json
+++ b/crowdsource-ui/locales/mai.json
@@ -388,5 +388,6 @@
 	"images labels validated": "images labels validated",
 	"<span id=\"current_badge_name_1\"></span> contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.": "<span id=\"current_badge_name_1\"></span> contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.",
 	"sentences contributed": "sentences contributed",
-	"images labels contributed": "images labels contributed"
+	"images labels contributed": "images labels contributed",
+	"virtual keyboard": "virtual keyboard"
 }
