| Priyanshu |fix constrain to movement of virtual keyboard

--- a/crowdsource-ui/locales/mai.json
+++ b/crowdsource-ui/locales/mai.json
@@ -389,5 +389,6 @@
 	"<span id=\"current_badge_name_1\"></span> contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.": "<span id=\"current_badge_name_1\"></span> contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.",
 	"sentences contributed": "sentences contributed",
 	"images labels contributed": "images labels contributed",
-	"virtual keyboard": "virtual keyboard"
+	"virtual keyboard": "virtual keyboard",
+	"Contributions made to Suno India": "Contributions made to Suno India"
 }
