--- a/crowdsource-ui/locales/mai.json
+++ b/crowdsource-ui/locales/mai.json
@@ -390,5 +390,6 @@
 	"sentences contributed": "sentences contributed",
 	"images labels contributed": "images labels contributed",
 	"virtual keyboard": "virtual keyboard",
-	"Contributions made to Suno India": "Contributions made to Suno India"
+	"Contributions made to Suno India": "Contributions made to Suno India",
+	"Virtual keyboard": "Virtual keyboard"
 }
