--- a/crowdsource-ui/locales/sa.json
+++ b/crowdsource-ui/locales/sa.json
@@ -339,5 +339,6 @@
 	"images labels contributed": "images labels contributed",
 	"virtual keyboard": "virtual keyboard",
 	"Contributions made to Suno India": "Contributions made to Suno India",
-	"Virtual keyboard": "Virtual keyboard"
+	"Virtual keyboard": "Virtual keyboard",
+	"Help us understand what’s wrong with the image labelled": "Help us understand what’s wrong with the image labelled"
 }
