Ayush | Done some UI changes for mobile

--- a/crowdsource-ui/locales/ur.json
+++ b/crowdsource-ui/locales/ur.json
@@ -381,5 +381,7 @@
 	"virtual keyboard": "virtual keyboard",
 	"Contributions made to Suno India": "Contributions made to Suno India",
 	"Virtual keyboard": "Virtual keyboard",
-	"Help us understand what’s wrong with the image labelled": "Help us understand what’s wrong with the image labelled"
+	"Help us understand what’s wrong with the image labelled": "Help us understand what’s wrong with the image labelled",
+	"Please type in selected language": "Please type in selected language",
+	"Typing language is wrong. Please type in selected language": "Typing language is wrong. Please type in selected language"
 }
