--- a/crowdsource-ui/locales/ta.json
+++ b/crowdsource-ui/locales/ta.json
@@ -340,5 +340,19 @@
 	"Virtual keyboard": "Virtual keyboard",
 	"Help us understand what’s wrong with the image labelled": "Help us understand what’s wrong with the image labelled",
 	"Please type in selected language": "Please type in selected language",
-	"Typing language is wrong. Please type in selected language": "Typing language is wrong. Please type in selected language"
+	"Typing language is wrong. Please type in selected language": "Typing language is wrong. Please type in selected language",
+	"Your Feedback": "Your Feedback",
+	"We would like to get your feedback to improve this site": "We would like to get your feedback to improve this site",
+	"Bolo": "Bolo",
+	"Suno": "Suno",
+	"Likho": "Likho",
+	"Dekho": "Dekho",
+	"Giving Feedback for?": "Giving Feedback for?",
+	"Select page": "Select page",
+	"Please select your feedback category": "Please select your feedback category",
+	"Type here...": "Type here...",
+	"Landing page": "Landing page",
+	"Select a category": "Select a category",
+	"Share your feedback below:": "Share your feedback below:",
+	"What is your opinion of this page": "What is your opinion of this page"
 }
