--- a/crowdsource-ui/locales/sa.json
+++ b/crowdsource-ui/locales/sa.json
@@ -350,5 +350,19 @@
 	"Hours transcribed and validated": "Hours transcribed and validated",
 	"Validate the translation": "Validate the translation",
 	"Validate the text as per the image": "Validate the text as per the image",
-	"Images labelled and validated": "Images labelled and validated"
+	"Images labelled and validated": "Images labelled and validated",
+	"Your Feedback": "Your Feedback",
+	"We would like to get your feedback to improve this site": "We would like to get your feedback to improve this site",
+	"Giving Feedback for?": "Giving Feedback for?",
+	"Bolo": "Bolo",
+	"Suno": "Suno",
+	"Likho": "Likho",
+	"Dekho": "Dekho",
+	"Select page": "Select page",
+	"Landing page": "Landing page",
+	"What is your opinion of this page": "What is your opinion of this page",
+	"Please select your feedback category": "Please select your feedback category",
+	"Select a category": "Select a category",
+	"Share your feedback below:": "Share your feedback below:",
+	"Type here...": "Type here..."
 }
