| Priyanshu |remove 'woohoo' from thankyou page and add placeholder in textarea

--- a/crowdsource-ui/locales/bn.json
+++ b/crowdsource-ui/locales/bn.json
@@ -454,5 +454,9 @@
 	"Please select your feedback category": "Please select your feedback category",
 	"Select a category": "Select a category",
 	"Share your feedback below:": "Share your feedback below:",
-	"Type here...": "Type here..."
+	"Type here...": "Type here...",
+	"Back to Suno India Home": "Back to Suno India Home",
+	"You took the first important step": "You took the first important step",
+	"Back to Likho India Home": "Back to Likho India Home",
+	"Back to dekho India Home": "Back to dekho India Home"
 }
