--- a/crowdsource-ui/locales/ur.json
+++ b/crowdsource-ui/locales/ur.json
@@ -405,5 +405,9 @@
 	"Validate the translation": "Validate the translation",
 	"Text validated": "Text validated",
 	"Validate the text as per the image": "Validate the text as per the image",
-	"Images labelled and validated": "Images labelled and validated"
+	"Images labelled and validated": "Images labelled and validated",
+	"Back to Suno India Home": "Back to Suno India Home",
+	"You took the first important step": "You took the first important step",
+	"Back to Likho India Home": "Back to Likho India Home",
+	"Back to dekho India Home": "Back to dekho India Home"
 }
