| Priyanshu |fix 'missing data' error on thankyou page

--- a/crowdsource-ui/locales/mnimm.json
+++ b/crowdsource-ui/locales/mnimm.json
@@ -338,5 +338,6 @@
 	"Back to Suno India Home": "Back to Suno India Home",
 	"You took the first important step": "You took the first important step",
 	"Back to Likho India Home": "Back to Likho India Home",
-	"Back to dekho India Home": "Back to dekho India Home"
+	"Back to dekho India Home": "Back to dekho India Home",
+	"Thank you for your enthusiasm to label the images.": "Thank you for your enthusiasm to label the images."
 }
