--- a/crowdsource-ui/locales/ur.json
+++ b/crowdsource-ui/locales/ur.json
@@ -443,5 +443,6 @@
 	"Resume": "Resume",
 	"You’ve earned your <span id=\"current_badge_name\"></span> Badge": "You’ve earned your <span id=\"current_badge_name\"></span> Badge",
 	"<span id=\"current_badge_name_1\"></span> Contributor level achieved for validating <span id=\"current_badge_count\"></span> sentences.": "<span id=\"current_badge_name_1\"></span> Contributor level achieved for validating <span id=\"current_badge_count\"></span> sentences.",
-	"Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"./validator-badges.html\">Know more</a>": "Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"./validator-badges.html\">Know more</a>"
+	"Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"./validator-badges.html\">Know more</a>": "Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"./validator-badges.html\">Know more</a>",
+	"Back to Bolo India Home": "Back to Bolo India Home"
 }
