| Priyanshu + Sreejith + Ayush| remove instructions from sunoIndia

--- a/crowdsource-ui/locales/ta.json
+++ b/crowdsource-ui/locales/ta.json
@@ -405,5 +405,8 @@
 	"<span id=\"current_badge_name_1\"></span> contributor level achieved for validating <span id=\"current_badge_count\"></span> sentences.": "<span id=\"current_badge_name_1\"></span> contributor level achieved for validating <span id=\"current_badge_count\"></span> sentences.",
 	"Please select correct lanaguge keyboard for typing...": "Please select correct lanaguge keyboard for typing...",
 	"Please select correct language keyboard for typing...": "Please select correct language keyboard for typing...",
-	"Please type in your chosen language": "Please type in your chosen language"
+	"Please type in your chosen language": "Please type in your chosen language",
+	"Start Recording": "Start Recording",
+	"Stop Recording": "Stop Recording",
+	"Re-record": "Re-record"
 }
